--- a/firebase.json
+++ b/firebase.json
@@ -1,14 +1,21 @@
+
 {
   "hosting": {
-    "rewrites": {
-"source":"**",
-"function":"api"
-    },
+    "rewrites": [{
+      "source": "**",
+      "function": "api"
+    }],
     "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ]
+  },
+  "emulators": {
+    "hosting": {
+      "host": "localhost",
+      "port": "5555"
+    }
   }
 }
